# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.215 2005/04/09 12:49:16 wolf31o2 Exp $

  09 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/pre-kmerge.sh:
  Removed sed for usb devices from legacy genkernel, as we're going to require
  a version much higher that no longer exhibits the bug.

  08 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/gamecd.conf.example, -targets/support/gamecdfs-update.sh,
  targets/support/livecdfs-update.sh:
  Removed empty gamecdfs-update.sh, updated livecdfs-update.sh to work
  properly with hotplug firmwares, and also updated gamecd.conf.example, since
  the ut2004demo shell script has been renamed to ut2004-demo.

  08 Apr 2005; Eric Edgar <rocket@gentoo.org> targets/support/pre-kmerge.sh:
  let genkernel always reinstall itself

  07 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/generic_stage_target.py,
  modules/stage1_target.py, targets/support/livecdfs-update.sh:
  fix case bug in livecdfs-update.sh; fix bug in initial command line
  arguement parsing; add cflags spec file support which is only allowed to
  override in stage1

  07 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/stage3/stage3-chroot.sh:
  Fix a use flag bug in the stage3

  07 Apr 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
  modules/generic_stage_target.py:
  Changes to allow cflags, chost, cxxflags in a spec file

  06 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/stage1/stage1-preclean-chroot.sh, targets/support/functions.sh,
  targets/support/gamecdfs-update.sh, targets/support/livecdfs-update.sh,
  targets/support/pre-kmerge.sh:
  change the code to use more case statements. Fix gcc issue in stage1.
