@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage2/Attic/livecd-stage2-controller.sh,v 1.3 2005/04/06 23:23:57 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage2/Attic/livecd-stage2-controller.sh,v 1.4 2005/04/11 20:05:40 rocket Exp $
 . ${clst_sharedir}/targets/support/functions.sh
 . ${clst_sharedir}/targets/support/filesystem-functions.sh
 
@@ -66,12 +66,13 @@ case $1 in
 
 		# now, finalize and tweak the livecd fs (inside of the chroot)
 		exec_in_chroot  ${clst_sharedir}/targets/support/livecdfs-update.sh
+		;;
 
-		# if the user has their own fs update script, execute it
-		if [ -n "${clst_livecd_fsscript}" ]
-		then
-			exec_in_chroot ${clst_livecd_fsscript}
-		fi
+	rc-update)
+		exec_in_chroot  ${clst_sharedir}/targets/support/rc-update.sh
+		;;
+	fsscript)
+		exec_in_chroot ${clst_fsscript}
 		;;
 
 	clean)
