@@ -1,0 +1,9 @@
+# Copyright 1999-2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage4/Attic/unmerge.sh,v 1.1 2005/04/11 20:05:40 rocket Exp $
+
+${clst_CHROOT} ${clst_chroot_path} /bin/bash << EOF
+	EMERGE_WARNING_DELAY=0 emerge -C $*
+EOF
+
+exit 0
